// Modelo de dados — Sistema de recebimento de matéria-prima (indústria ervateira)
// TCC 2 · João Pedro Ortolan Pereira
//
// Cada bloco abaixo vira uma tabela no PostgreSQL.
// As entidades saíram do protótipo no Figma e do levantamento feito na ervateira.

// Gerador clássico: produz JavaScript puro dentro de node_modules,
// importado por require('@prisma/client'). É o que combina com este projeto,
// que é JavaScript e não TypeScript.
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  // No Prisma 7 a linha de conexão não fica mais aqui:
  // para o CLI ela está em prisma.config.ts, e para a aplicação
  // é passada ao PrismaClient por um adaptador (ver src/prisma.js).
}

// ---------------------------------------------------------------------------
// LISTAS FIXAS (enums) — valores que o banco aceita nesses campos, e só eles.
// Evita que alguém grave "nativa", "Nativa" e "NATIVA" como se fossem diferentes.
// ---------------------------------------------------------------------------

enum PerfilUsuario {
  OPERADOR_BALANCA
  ANALISTA_QUALIDADE
  COMPRADOR_AVALIADOR
  ADMINISTRATIVO

  /// Administrador do sistema. Diferente do ADMINISTRATIVO, que é o setor:
  /// o administrativo cuida do negócio (emite ordem, dá baixa em pagamento) e
  /// o administrador cuida das contas de acesso. É o único perfil que entra
  /// em /api/usuarios, e a única operação que o administrativo NÃO faz.
  ADMINISTRADOR
}

enum TipoErva {
  PLANTADA
  NATIVA
}

enum TipoMateriaPrima {
  ERVA_MATE_PLANTADA
  ERVA_MATE_NATIVA
  PALITO
  LENHA
}

enum GrauQueima {
  NAO
  EM_PARTE
  SIM
}

enum Classificacao {
  A
  B
  C
}

enum FormaPagamento {
  PIX
  CONTA_BANCARIA
  /// Pagamento em espécie, no balcão. Existe porque na prática acontece —
  /// produtor pequeno, entrega única, sem conta bancária. Omitir a opção não
  /// faz o dinheiro deixar de circular: faz o sistema registrar mentira.
  DINHEIRO
}

/// Corrente ou poupança muda o depósito: um número de conta poupança usado
/// como corrente é devolvido pelo banco, e o produtor fica sem receber.
enum TipoConta {
  CORRENTE
  POUPANCA
}

enum TipoChavePix {
  CPF
  TELEFONE
  EMAIL
  ALEATORIA
}

enum SituacaoCarga {
  /// O caminhão entrou, foi pesado cheio e ainda não voltou vazio à balança.
  /// A carga existe, tem produtor, matéria-prima e peso bruto — o que ela não
  /// tem é peso líquido, e por isso não vai para o laboratório.
  AGUARDANDO_TARA
  AGUARDANDO_ANALISE
  ANALISADA
  EM_ORDEM_PAGAMENTO
  PAGA
  REPROVADA
}

enum SituacaoOrdem {
  PENDENTE
  PAGA
  CANCELADA
}

enum SituacaoSincronizacao {
  PENDENTE
  ENVIADO
  ERRO
}

// ---------------------------------------------------------------------------
// PESSOAS E ACESSO
// ---------------------------------------------------------------------------

/// Quem usa o sistema. RF15 e RNF04 — uso simultâneo por múltiplos usuários.
model Usuario {
  id           String        @id @default(uuid())
  nome         String
  usuario      String        @unique
  email        String?       @unique
  senhaHash    String
  perfil       PerfilUsuario
  ativo        Boolean       @default(true)
  ultimoAcesso DateTime?
  criadoEm     DateTime      @default(now())
  atualizadoEm DateTime      @updatedAt

  avaliacoes Avaliacao[]
  pesagens   Carga[]
  analises   AnaliseQualidade[]

  @@map("usuarios")
}

/// Produtor ou fornecedor de matéria-prima. RF01 e RF02.
/// Os dados de pagamento ficam aqui para que a ordem já saiba para onde pagar.
model Produtor {
  id       String  @id @default(uuid())
  nome     String
  cpfCnpj  String  @unique
  telefone String?
  cep      String? @db.Char(8)
  endereco String?
  bairro   String?
  municipio String?
  uf       String? @db.Char(2)

  /// COMO ESTE PRODUTOR RECEBE.
  /// Os campos abaixo são todos opcionais porque só um subconjunto vale por
  /// vez: Pix usa tipoChavePix e chavePix; conta bancária usa banco, agência,
  /// conta e tipoConta; dinheiro não usa nenhum. Modelar isso em três tabelas
  /// separadas seria mais "correto" no papel e pior na prática — obrigaria
  /// três junções para responder "para onde pago este produtor?", que é a
  /// pergunta mais frequente do módulo financeiro.
  formaPagamento FormaPagamento @default(PIX)
  tipoChavePix   TipoChavePix?
  chavePix       String?
  titularConta   String?
  banco          String?
  agencia        String?
  conta          String?
  tipoConta      TipoConta?

  /// Identificador gerado no celular quando o cadastro é feito em campo, sem conexão.
  /// É o que impede o mesmo produtor de entrar duas vezes se o envio for repetido (RF17).
  clientId       String?   @unique
  criadoOffline  Boolean   @default(false)
  sincronizadoEm DateTime?

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  ervais           Erval[]
  cargas           Carga[]
  ordensPagamento  OrdemPagamento[]

  @@map("produtores")
}

/// Área de onde a erva é colhida. RF03 e RF04 — tipo, quantidade estimada e localização.
model Erval {
  id                  String   @id @default(uuid())
  produtorId          String
  identificacao       String
  tipoErva            TipoErva
  quantidadeEstimadaKg Decimal? @db.Decimal(12, 2)
  idadeAnos           Int?
  latitude            Decimal? @db.Decimal(10, 7)
  longitude           Decimal? @db.Decimal(10, 7)

  clientId       String?   @unique
  criadoOffline  Boolean   @default(false)
  sincronizadoEm DateTime?

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  produtor   Produtor    @relation(fields: [produtorId], references: [id])
  avaliacoes Avaliacao[]
  cargas     Carga[]

  @@index([produtorId])
  @@map("ervais")
}

/// Quem transporta a carga. O nome vai impresso no ticket de pesagem.
model Motorista {
  id          String    @id @default(uuid())
  nome        String
  cpf         String    @unique
  telefone    String?
  cnhCategoria String?
  cnhValidade DateTime?
  ativo       Boolean   @default(true)

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  veiculos Veiculo[]
  cargas   Carga[]

  @@map("motoristas")
}

/// Guardar a tara aqui evita repesar o veículo vazio a cada entrega.
model Veiculo {
  id          String  @id @default(uuid())
  motoristaId String
  placa       String  @unique
  tipo        String?
  taraKg      Decimal? @db.Decimal(10, 2)
  principal   Boolean @default(false)
  ativo       Boolean @default(true)

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  motorista Motorista @relation(fields: [motoristaId], references: [id])
  cargas    Carga[]

  @@index([motoristaId])
  @@map("veiculos")
}

// ---------------------------------------------------------------------------
// CAMPO — o que o aplicativo produz, com ou sem conexão
// ---------------------------------------------------------------------------

/// Avaliação da erva feita no erval, antes da colheita. RF05 e RF18.
model Avaliacao {
  id        String @id @default(uuid())
  ervalId   String
  usuarioId String

  dataAvaliacao        DateTime
  tipoErva             TipoErva
  ervaQueimada         GrauQueima     @default(NAO)
  idadeErvalAnos       Int?
  quantidadeEstimadaKg Decimal?       @db.Decimal(12, 2)
  classificacao        Classificacao?
  umidadeEstimada      Decimal?       @db.Decimal(5, 2)
  taloAparente         String?
  /// Preço acertado com o produtor ainda no erval. Opcional.
  valorCombinadoKg     Decimal?       @db.Decimal(10, 4)
  latitude             Decimal?       @db.Decimal(10, 7)
  longitude            Decimal?       @db.Decimal(10, 7)
  observacoes          String?

  /// Gerado no celular. Serve de chave de idempotência: se o mesmo registro
  /// for enviado duas vezes, o servidor reconhece e não duplica.
  clientId       String    @unique
  criadoOffline  Boolean   @default(false)
  /// Momento em que o registro foi alterado NO DISPOSITIVO. É este campo que
  /// decide o vencedor na resolução de conflito por última escrita válida.
  alteradoEmOrigem DateTime
  sincronizadoEm DateTime?

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  erval   Erval       @relation(fields: [ervalId], references: [id])
  usuario Usuario     @relation(fields: [usuarioId], references: [id])
  fotos   FotoErval[]
  cargas  Carga[]

  @@index([ervalId])
  @@index([usuarioId])
  @@map("avaliacoes")
}

/// Fotos tiradas no erval. Ficam em fila própria porque são pesadas e não podem
/// atrasar o envio da avaliação em si.
model FotoErval {
  id          String @id @default(uuid())
  avaliacaoId String

  caminho      String
  tamanhoBytes Int?
  largura      Int?
  altura       Int?

  clientId       String    @unique
  sincronizadoEm DateTime?
  criadoEm       DateTime  @default(now())

  avaliacao Avaliacao @relation(fields: [avaliacaoId], references: [id], onDelete: Cascade)

  @@index([avaliacaoId])
  @@map("fotos_erval")
}

// ---------------------------------------------------------------------------
// PÁTIO — pesagem, qualidade e pagamento
// ---------------------------------------------------------------------------

/// Uma entrega pesada na balança da empresa. RF06 a RF09.
/// O número do ticket é o que sai impresso para o motorista.
model Carga {
  id           String @id @default(uuid())
  numeroTicket String @unique

  produtorId  String
  ervalId     String?
  motoristaId String?
  veiculoId   String?
  usuarioId   String
  avaliacaoId String?

  dataHora         DateTime         @default(now())
  tipoMateriaPrima TipoMateriaPrima

  /// A PESAGEM ACONTECE EM DUAS IDAS À BALANÇA, e é por isso que dois destes
  /// três campos são anuláveis.
  ///
  /// Na entrada o caminhão sobe cheio: grava-se o peso bruto, e só ele. A
  /// carga fica em AGUARDANDO_TARA — ela existe, tem produtor e matéria-prima,
  /// mas ainda não tem quanto pesa a erva. Depois de descarregar, o caminhão
  /// volta vazio, a tara é pesada, o líquido fecha e o ticket é emitido.
  ///
  /// Anulável é diferente de zero: zero seria um caminhão sem peso, e o peso
  /// líquido zerado entraria numa ordem de pagamento como se fosse um valor
  /// legítimo. Nulo obriga quem lê a perceber que a pesagem não terminou.
  pesoBrutoKg        Decimal  @db.Decimal(12, 2)
  taraKg             Decimal? @db.Decimal(12, 2)
  /// Bruto menos tara. Guardado calculado para não recalcular em toda consulta.
  pesoLiquidoKg      Decimal? @db.Decimal(12, 2)
  /// Metragem da lenha, em metros cúbicos. Só existe para o tipo LENHA.
  ///
  /// É REGISTRO, e não base de cálculo: a lenha continua sendo paga por quilo,
  /// como todo o resto. O metro cúbico entra porque é assim que o negócio de
  /// lenha se fala e se confere no pátio — o caminhão é medido, e o número
  /// precisa estar no ticket ao lado do peso.
  metragemM3         Decimal? @db.Decimal(10, 2)
  /// Quanto o avaliador tinha estimado em campo — permite medir a acurácia da estimativa.
  pesoEstimadoCampoKg Decimal? @db.Decimal(12, 2)

  /// Preço antes do desconto por qualidade.
  /// Preço por quilo. ANULÁVEL desde que o preço saiu da balança: quem o define
  /// é o administrativo, na emissão da ordem de pagamento, porque é lá que o
  /// valor final é acordado. Continua aqui para as cargas antigas, que nasceram
  /// com o preço digitado na pesagem, e para o caso de o preço já vir combinado
  /// do campo.
  precoBaseKg Decimal? @db.Decimal(10, 4)

  situacao  SituacaoCarga @default(AGUARDANDO_TARA)
  observacoes String?

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  produtor  Produtor   @relation(fields: [produtorId], references: [id])
  erval     Erval?     @relation(fields: [ervalId], references: [id])
  motorista Motorista? @relation(fields: [motoristaId], references: [id])
  veiculo   Veiculo?   @relation(fields: [veiculoId], references: [id])
  usuario   Usuario    @relation(fields: [usuarioId], references: [id])
  avaliacao Avaliacao? @relation(fields: [avaliacaoId], references: [id])

  analise    AnaliseQualidade?
  itemOrdem  ItemOrdemPagamento?

  @@index([produtorId])
  @@index([dataHora])
  @@index([situacao])
  @@map("cargas")
}

/// Análise feita no laboratório, na chegada da carga.
/// O percentual de palito é o que ajusta o preço por quilo.
model AnaliseQualidade {
  id        String @id @default(uuid())
  cargaId   String @unique
  usuarioId String

  dataHora           DateTime @default(now())
  palitoPercentual   Decimal  @db.Decimal(5, 2)
  umidadePercentual  Decimal? @db.Decimal(5, 2)
  folhaPercentual    Decimal? @db.Decimal(5, 2)
  observacoes        String?

  /// Motivo escrito pelo analista ao reprovar a carga. Obrigatório na
  /// reprovação: sem ele, ninguém sabe seis meses depois em que a decisão se
  /// baseou. Nulo nas análises aprovadas.
  motivoReprovacao   String?
  /// O preço por quilo e o valor que ele produz.
  ///
  /// ANULÁVEIS de propósito: a análise mede QUALIDADE, e qualidade não depende
  /// de preço. O laboratório registra as medidas da amostra; o preço só entra
  /// na emissão da ordem. Quando a ordem é emitida, ela grava estes dois
  /// campos de volta aqui — assim o histórico da análise fica completo e as
  /// consultas de valor continuam funcionando.
  precoAjustadoKg    Decimal? @db.Decimal(10, 4)
  valorTotal         Decimal? @db.Decimal(12, 2)
  aprovada           Boolean  @default(true)

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  carga   Carga   @relation(fields: [cargaId], references: [id], onDelete: Cascade)
  usuario Usuario @relation(fields: [usuarioId], references: [id])

  @@map("analises_qualidade")
}

/// Ordem de pagamento de um produtor, agrupando as cargas de um período. RF11.
model OrdemPagamento {
  id         String @id @default(uuid())
  numero     String @unique
  produtorId String

  periodoInicio DateTime
  periodoFim    DateTime
  valorTotal    Decimal       @db.Decimal(14, 2)
  situacao      SituacaoOrdem @default(PENDENTE)

  /// DESTINO DO PAGAMENTO, COPIADO NA EMISSÃO.
  ///
  /// O cadastro do produtor diz para onde pagar HOJE. A ordem precisa dizer
  /// para onde se pagou NAQUELE DIA — são perguntas diferentes, e a segunda é
  /// a que se responde quando o produtor liga meses depois dizendo que não
  /// recebeu. Por isso o destino inteiro é copiado, e não referenciado.
  ///
  /// E porque é cópia, ele pode ser DIFERENTE do cadastro: acontece de o
  /// produtor avisar na hora da emissão que desta vez o dinheiro vai para
  /// outra chave, ou para a conta do filho. O sistema aceita, registra o que
  /// foi combinado, e deixa o cadastro em paz — a menos que se peça para
  /// atualizar os dois.
  formaPagamentoSnapshot FormaPagamento?
  chavePixSnapshot       String?
  tipoChavePixSnapshot   TipoChavePix?
  titularSnapshot        String?
  bancoSnapshot          String?
  agenciaSnapshot        String?
  contaSnapshot          String?
  tipoContaSnapshot      TipoConta?

  emitidaEm DateTime  @default(now())
  pagaEm    DateTime?

  criadoEm     DateTime @default(now())
  atualizadoEm DateTime @updatedAt

  produtor Produtor             @relation(fields: [produtorId], references: [id])
  itens    ItemOrdemPagamento[]

  @@index([produtorId])
  @@map("ordens_pagamento")
}

/// Liga uma carga a uma ordem. Uma carga só pode estar em uma ordem.
model ItemOrdemPagamento {
  id      String @id @default(uuid())
  ordemId String
  cargaId String @unique

  pesoLiquidoKg Decimal @db.Decimal(12, 2)
  precoKg       Decimal @db.Decimal(10, 4)
  valor         Decimal @db.Decimal(12, 2)

  ordem OrdemPagamento @relation(fields: [ordemId], references: [id], onDelete: Cascade)
  carga Carga          @relation(fields: [cargaId], references: [id])

  @@index([ordemId])
  @@map("itens_ordem_pagamento")
}

// ---------------------------------------------------------------------------
// SINCRONIZAÇÃO — a evidência que sustenta o indicador do Quadro 7
// ---------------------------------------------------------------------------

/// Registro, no servidor, de cada operação recebida do aplicativo.
/// É daqui que sai a taxa de sincronização: enviados com sucesso ÷ total coletado offline.
model RegistroSincronizacao {
  id           String @id @default(uuid())
  dispositivoId String
  usuarioId    String?

  entidade  String
  operacao  String
  clientId  String @unique
  payload   Json?

  situacao      SituacaoSincronizacao @default(PENDENTE)
  tentativas    Int                   @default(0)
  erroMensagem  String?
  houveConflito Boolean               @default(false)
  versaoVencedora String?

  criadoEmOrigem DateTime
  recebidoEm     DateTime  @default(now())
  confirmadoEm   DateTime?

  @@index([dispositivoId])
  @@index([situacao])
  @@map("registros_sincronizacao")
}

// ---------------------------------------------------------------------------
// AUDITORIA — quem alterou o quê
// ---------------------------------------------------------------------------

/// Registro de alteração administrativa. Guarda o que ninguém consegue
/// reconstituir depois: quem abriu uma conta, quem trocou o perfil de alguém,
/// quem redefiniu senha de quem.
///
/// DUAS DECISÕES DE MODELAGEM QUE VALEM EXPLICAR:
///
/// 1. NÃO há relação com Usuario. É de propósito. Se houvesse, apagar uma
///    conta apagaria junto o rastro do que ela fez — que é exatamente o
///    momento em que o rastro mais importa. Por isso o nome e o perfil de quem
///    agiu ficam COPIADOS aqui (usuarioNome, usuarioPerfil): o registro
///    continua legível mesmo que a conta suma ou mude de nome depois.
///
/// 2. `antes` e `depois` guardam o valor dos campos que mudaram, e só deles.
///    Guardar o objeto inteiro encheria a tabela de repetição; guardar só a
///    ação ("perfil alterado") não responderia "alterado de quê para quê", que
///    é a única pergunta que se faz a um log de auditoria.
///
/// Senha NUNCA entra aqui, nem em `antes` nem em `depois` — nem o hash. O que
/// se registra é que a senha foi redefinida, não qual era nem qual passou a ser.
model RegistroAuditoria {
  id String @id @default(uuid())

  /// Quem fez. Copiado, e não referenciado — ver a nota 1 acima.
  usuarioId     String
  usuarioNome   String
  usuarioPerfil PerfilUsuario

  /// O que aconteceu, em maiúsculas e sem espaço: USUARIO_CRIADO,
  /// USUARIO_ALTERADO, SENHA_REDEFINIDA.
  acao String

  /// Sobre o quê: hoje sempre Usuario.
  entidade   String
  entidadeId String?

  /// Descrição legível do alvo, também copiada: "Cristiane Modesto
  /// (cristiane.modesto)". Sem isso, a tela do log precisaria de um JOIN com
  /// uma conta que pode não existir mais.
  alvo String?

  antes  Json?
  depois Json?

  criadoEm DateTime @default(now())

  @@index([criadoEm])
  @@index([acao])
  @@index([usuarioId])
  @@map("registros_auditoria")
}
